Fix canvas-chart favicons paths

--- a/canvas-chart/index.html
+++ b/canvas-chart/index.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#202020">
     <meta name="apple-mobile-web-app-title" content="Nikita Mihalyov">
-    <meta name="msapplication-TileImage" content="img/favicons/144x144.png">
+    <meta name="msapplication-TileImage" content="favicons/144x144.png">
     <meta name="msapplication-TileColor" content="#202020">
     <meta name="format-detection" content="telephone=no">
         <meta property="og:title" content="Nikita Mihalyov">
@@ -22,13 +22,13 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/favicons/64x64.png" type="image/png">
-    <link rel="icon" href="img/favicons/152x152.png" type="image/png" sizes="152x152">
-    <link rel="icon" href="img/favicons/256x256.png" type="image/png" sizes="256x256">
-    <link rel="icon" href="img/favicons/512x512.png" type="image/png" sizes="512x512">
-    <link rel="apple-touch-icon" href="img/favicons/152x152.png" sizes="152x152">
-    <link rel="apple-touch-icon" href="img/favicons/256x256.png" sizes="256x256">
-    <link rel="apple-touch-icon" href="img/favicons/512x512.png" sizes="512x512">
+    <link rel="shortcut icon" href="favicons/64x64.png" type="image/png">
+    <link rel="icon" href="favicons/152x152.png" type="image/png" sizes="152x152">
+    <link rel="icon" href="favicons/256x256.png" type="image/png" sizes="256x256">
+    <link rel="icon" href="favicons/512x512.png" type="image/png" sizes="512x512">
+    <link rel="apple-touch-icon" href="favicons/152x152.png" sizes="152x152">
+    <link rel="apple-touch-icon" href="favicons/256x256.png" sizes="256x256">
+    <link rel="apple-touch-icon" href="favicons/512x512.png" sizes="512x512">
     <link rel="manifest" href="../manifest.json">
     <script defer src="utils.js"></script>
     <script defer src="tooltip.js"></script>
