Add Prime Grid documentation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="msapplication-TileColor" content="#202020">
     <meta name="format-detection" content="telephone=no">
         <meta property="og:title" content="Nikita Mihalyov">
-        <meta property="og:url" content="">
+        <meta property="og:url" content="nmihalyov.tk">
         <meta property="og:type" content="website">
         <meta property="og:image" content="img/og.png">
         <meta property="og:description" content="Frontend web developer">
@@ -175,7 +175,7 @@
             <div class="card">
               <p class="card__title">Prime Grid</p>
               <p class="card__desc">Flexible, simple and clean grid library for page layout with a lot of settings. Over 20 stars on GitHub.</p>
-              <div class="card__buttons"><a class="button button--primary card__btn" href="#" target="_blank" rel="noopener"><span class="card__btn-icon card__btn-icon--demo"></span> Open demo</a><a class="button button--secondary card__btn" href="https://github.com/nmihalyov/prime-grid" target="_blank" rel="noopener"><span class="card__btn-icon card__btn-icon--github"></span> View on GitHub</a>
+              <div class="card__buttons"><a class="button button--primary card__btn" href="prime-grid" target="_blank" rel="noopener"><span class="card__btn-icon card__btn-icon--demo"></span> Open demo</a><a class="button button--secondary card__btn" href="https://github.com/nmihalyov/prime-grid" target="_blank" rel="noopener"><span class="card__btn-icon card__btn-icon--github"></span> View on GitHub</a>
               </div>
             </div>
             <div class="card">
